openshift/deploy_greenmail.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: greenmail
  namespace: greenmail
  labels:
    app: greenmail
    app.kubernetes.io/component: greenmail
    app.kubernetes.io/instance: greenmail
    app.kubernetes.io/name: greenmail
    app.kubernetes.io/part-of: greenmail-app
    app.openshift.io/runtime-namespace: greenmail
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greenmail
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: greenmail
        deployment: greenmail
    spec:
      containers:
        - name: greenmail
          image: >-
            quay.io/avoigtma/greenmailtest:latest
          ports:
            - containerPort: 3025
              protocol: TCP
            - containerPort: 3110
              protocol: TCP
            - containerPort: 3143
              protocol: TCP
            - containerPort: 3465
              protocol: TCP
            - containerPort: 3993
              protocol: TCP
            - containerPort: 3995
              protocol: TCP
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
