openshift/route_greenmail-api.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: greenmail-api
  namespace: greenmail
  labels:
    app: greenmail
    app.kubernetes.io/component: greenmail
    app.kubernetes.io/instance: greenmail
    app.kubernetes.io/name: greenmail
    app.kubernetes.io/part-of: greenmail-app
    app.openshift.io/runtime-version: latest
  annotations:
    openshift.io/host.generated: 'true'
spec:
  to:
    kind: Service
    name: greenmail
    weight: 100
  port:
    targetPort: api
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
